[package]
name = "bvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
directories = "4.0.1"
octocrab = "0.16.0"
reqwest = { version = "0.11.11", features = ["stream"] }
serde = "1.0.142"
serde_derive = "1.0.142"
tinytemplate = "1.2.1"
zip = "0.6.2"
indicatif = "0.15.0"
futures-util = "0.3.21"
bytes = "1.0.1"
tokio = { version = "1.20.1", features = ["full"] }
dialoguer = "0.10.2"
regex = "1.6.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
