[package]
name = "bvm"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1.0.11"
clap = { version = "4.3.15", features = ["derive"] }
directories = "5.0.1"
lazy_static = "1.4.0"
regex = "1.9.1"
